# llm-evaluation-notes

./: 404.html  index.html  init.yml  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.agent/: README.md
.agent/skills/chatbot-setup/: SKILL.md
.agent/skills/dcka-article-generator/: SKILL.md
.agent/skills/mkdocs-deploy/: SKILL.md
.agent/skills/mkdocs-setup/: SKILL.md
.agent/skills/mkdocs-setup/assets/: extra.css  index.md  mkdocs.yml  pyproject.toml
.agent/skills/railway-deploy/assets/: Dockerfile  chat_server.py  pyproject.toml
appendix/changelog/: index.html
appendix/glossary/: index.html
appendix/references/: index.html
assets/css/: extra.css
backend/: Dockerfile  README.md  chat_server.py  pyproject.toml
benchmarking/: index.html
cases/: index.html
cases/llm-cases/: index.html
cases/ml-cases/: index.html
cases/rag-cases/: index.html
collaboration/: index.html
docs/: index.md
docs/appendix/: changelog.md  glossary.md  references.md
docs/benchmarking/: index.md
docs/cases/: index.md  llm-cases.md  ml-cases.md  rag-cases.md
docs/collaboration/: index.md
docs/research/: classics.md  index.md
docs/security/: defense-mechanism.md  index.md  stress-testing.md
docs/strategy/: evaluation-metrics.md  index.md
hooks/: generate_content.py
overrides/: main.html
research/: index.html
research/classics/: index.html
search/: search_index.json
security/: index.html
security/defense-mechanism/: index.html
security/stress-testing/: index.html
strategy/: index.html
strategy/evaluation-metrics/: index.html
(+69 files in other folders)
