[project]
name = "llm-evaluation-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.1",
]
