[project]
name = "chatbot-backend"
version = "0.1.0"
description = "AI Chatbot Backend with Gemini API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "google-generativeai>=0.8.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
